<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bereg.phonebook.ui.fragments.DetailContactFragment">

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_street_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_building_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chk_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_friends" />

    <CheckBox
        android:id="@+id/chk_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_people" />

    <CheckBox
        android:id="@+id/chk_animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_animals" />

</LinearLayout>
